# physics-simulator

./: .gitmodules  CMakeLists.txt  README.md  spec.md
examples/: basic_object.phydesc  drag.phydesc  freefall.phydesc  planet.phydesc  spring.phydesc  spring_track.phydesc  three_body.phydesc
phylib/: CMakeLists.txt
phylib/include/: object.h  object_class.h  physics.h  special_object.h  tracker.h
phylib/include/component/: force.h  movement.h  renderer.h
phylib/include/component/renderers/: arrow_renderer.h  circle_renderer.h  trail_renderer.h
phylib/include/util/: builers.h  chrono_util.h  const_str.h  obj_class_util.h  perf_counter.h  vec.h
phylib/src/: builders.cpp  object.cpp  object_class.cpp  perf_counter.cpp  physics.cpp  special_object.cpp  tracker.cpp
phylib/src/component/: forces.cpp  movement.cpp
phylib/src/component/renderers/: circle_renderer.cpp  trail_renderer.cpp
src/: interpret_dsl.cpp  main.cpp
